# ChessCam

./: Animation.cpp  Animation.h  Bishop.cc  Bishop.h  CMakeLists.txt  ChessCamGUI.pro  ChessPiece.cc  ChessPiece.h  Chessboard.cc  Chessboard.h  ChessboardDetection.h  ChessboardDetector.cpp  ChessboardDetector.h  ChessboardObserver.h  ChessboardOvserver.cpp  ChessboardState.h  Color.h  Display.cpp  Display.h  FiguresFinder.cpp  King.cc  King.h  Knight.cc  Knight.h  MoveRecognizer.cpp  Pawn.cc  Pawn.h  Point.cpp  Point.h  Queen.cc  Queen.h  README.md  Rook.cc  Rook.h  Sleeper.cpp  Sleeper.h  StateDetector.cpp  StateDetector.h  images.qrc  main.cc  (+5 more)
camera/: ChessboardDetection.h  ChessboardDetector.cpp  ChessboardObserver.h  ChessboardOvserver.cpp  ChessboardState.cpp  FiguresFinder.cpp  FiguresFinder.h  MoveRecognizer.cpp  MoveRecognizer.h  WidgetOpenCV.cpp  WidgetOpenCV.h
